[package]
name = "mt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
argon2 = "0.3.0"
async-std = {version = "1.10.0", features = ["attributes"]}
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fern = { version = "0.6.0" }
log = "0.4.14"
rand_core = "0.6.3"
serde = "1.0.130"
serde_json = "1.0.67"
sqlx = { version = "0.5.7", features = ["runtime-async-std-rustls", "sqlite", "chrono", "postgres", "any"] }
thiserror = "1.0.29"
tide = "0.16.0"
